--- a/signin.html
+++ b/signin.html
@@ -58,7 +58,7 @@
     <form>
         <Fieldset>
             <legend>Username:</legend>
-            <input type="text" name="Uname" placeholder="Username should be atleast one caps and special character" tabindex="1" pattern="[a-zA-Z_]"+ required>
+            <input type="text" name="Uname" placeholder="Username should be atleast one caps and special character" tabindex="1" pattern=[a-zA-Z_]+ required>
         </Fieldset>
             <br>
         <Fieldset>
